samples/_failures_safe/1761488187_f3de78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8b7def5.c: In function ‘main’:
./samples/SAFE/__tmp_c8b7def5.c:153:9: error: expected declaration or statement at end of input
  153 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_c8b7def5.c:153:9: error: expected declaration or statement at end of input
